@@ -13,10 +13,27 @@ namespace System.Windows.Controls {
 		#region Dependency Properties
 		public static readonly DependencyProperty IsSelectedProperty = DependencyProperty.Register("IsSelected", typeof(bool), typeof(TabItem), new FrameworkPropertyMetadata(delegate(DependencyObject d, DependencyPropertyChangedEventArgs e) {
 			TabItem i = (TabItem)d;
-			if ((bool)e.NewValue)
+			TabControl tab_control = i.GetTabControl();
+			if ((bool)e.NewValue) {
+				if (tab_control != null) {
+					int index_of_current_instance = tab_control.ItemContainerGenerator.IndexFromContainer(i);
+					if (index_of_current_instance != -1) {
+						for (int item_index = 0; item_index < tab_control.Items.Count; item_index++) {
+							TabItem tab_item = (TabItem)tab_control.ItemContainerGenerator.ContainerFromIndex(item_index);
+							if (tab_item != null && tab_item != i)
+								tab_item.IsSelected = false;
+						}
+						tab_control.SelectedItem = tab_control.Items[index_of_current_instance];
+					}
+				}
 				i.OnSelected(new RoutedEventArgs(SelectedEvent, i));
-			else
+			} else {
+				if (tab_control != null) {
+					if (tab_control.SelectedItem == tab_control.ItemContainerGenerator.ItemFromContainer(i))
+						tab_control.SelectedItem = null;
+				}
 				i.OnUnselected(new RoutedEventArgs(UnselectedEvent, i));
+			}
 		}));
 		public static readonly DependencyProperty TabStripPlacementProperty = DependencyProperty.RegisterReadOnly("TabStripPlacement", typeof(Dock), typeof(TabItem), new FrameworkPropertyMetadata(Dock.Top)).DependencyProperty; 
 		#endregion
@@ -58,8 +75,16 @@ namespace System.Windows.Controls {
 		#endregion
 
 		#region Protected Methods
+		/// <summary>
+		/// 
+		/// </summary>
+		/// <param name="e"></param>
+		/// <remarks>
+		/// Disabling this causes the access keys not to work.
+		/// </remarks>
 		protected override void OnAccessKey(AccessKeyEventArgs e) {
 			base.OnAccessKey(e);
+			SelectIfInTabControl();
 		}
 
 		protected override void OnContentChanged(object oldContent, object newContent) {
@@ -84,8 +109,17 @@ namespace System.Windows.Controls {
 
 		protected override void OnMouseLeftButtonDown(MouseButtonEventArgs e) {
 			base.OnMouseLeftButtonDown(e);
+			SelectIfInTabControl();
+			e.Handled = true;
 		}
 
+		/// <summary>
+		/// 
+		/// </summary>
+		/// <param name="e"></param>
+		/// <remarks>
+		/// Disabling this causes Ctrl+Tab not to work.
+		/// </remarks>
 		protected override void OnPreviewGotKeyboardFocus(KeyboardFocusChangedEventArgs e) {
 			base.OnPreviewGotKeyboardFocus(e);
 		}
@@ -94,6 +128,18 @@ namespace System.Windows.Controls {
 		}
 
 		protected virtual void OnUnselected(RoutedEventArgs e) {
+		}
+		#endregion
+
+		#region Private Methods
+		TabControl GetTabControl() {
+			return ItemsControl.ItemsControlFromItemContainer(this) as TabControl;
+		}
+
+		void SelectIfInTabControl() {
+			TabControl tab_control = GetTabControl();
+			if (tab_control != null && tab_control.Parent != null)
+				IsSelected = true;
 		}
 		#endregion
 	}
